# C-Primer-Plus-Code

./: README.md
Chapter2/: CMakeLists.txt  first.c  main.c
Chapter2/include/: eight.h  first.h  fourth.h  second.h  sixth.h  third.h
Chapter2/src/: eight.c  first.c  fourth.c  second.c  sixth.c  third.c
Chapter3/: CMakeLists.txt  main.c
Chapter3/include/: five.h  four.h  six.h  three.h  two.h
Chapter3/src/: five.c  four.c  six.c  three.c  two.c
Chapter4/: CMakeLists.txt  main.c
Chapter4/include/: chapter4.h
Chapter4/src/: chapter4.c
Chapter5/: CMakeLists.txt  main.c
Chapter5/include/: chapter5.h
Chapter5/src/: chapter5.c
